--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@fullhuman/postcss-purgecss": "^4.1.3",
     "@headlessui/react": "^1.6.6",
     "@heroicons/react": "^1.0.6",
     "graphql": "^16.5.0",
@@ -22,6 +23,7 @@
     "next": "12.2.3",
     "next-compose-plugins": "^2.2.1",
     "next-pwa": "^5.5.5",
+    "postcss-preset-env": "^7.7.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-multi-carousel": "^2.8.2",
