--- a/package.json
+++ b/package.json
@@ -29,7 +29,8 @@
     "react-multi-carousel": "^2.8.2",
     "sass": "^1.54.0",
     "swr": "^1.3.0",
-    "workbox-core": "^6.5.4"
+    "workbox-core": "^6.5.4",
+    "wpapi": "^1.2.2"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.7",
